src/test/deca/syntax/invalid/created/class/bad_decl_class2.deca
// Description :
//    decl class extends manquant
//
// Resultats :
//		Syntaxe error

class A B {

}